force-app/main/default/objects/Sync_User_Field_Value__c/Sync_User_Field_Value__c.object-meta.xml
<CustomObject>
    <label>Sync User Field Value</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sync User Field Value ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync User Field Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>