force-app/main/default/objects/Sync_User_Field_Value__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync User Field Values</relationshipLabel>
    <relationshipName>Sync_User_Field_Values</relationshipName>
    <type>Lookup</type>
</CustomField>