force-app/main/default/objects/Sync_User_Field_Value__c/fields/Account_Credit_Approval__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Credit Approval</label>
    <referenceTo>Account_Credit_Approval__c</referenceTo>
    <relationshipLabel>Sync User Field Values</relationshipLabel>
    <relationshipName>Sync_User_Field_Values</relationshipName>
    <type>Lookup</type>
</CustomField>