force-app/main/default/objects/Sync_User_Field_Value__c/fields/Account_Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Account_Safari_Key__c</fullName>
    <formula>IF(CONTAINS(Safari_Key__c, &#39;HOU&#39;)
  , Account__r.HOU_ID__c 
  , IF(CONTAINS(Safari_Key__c, &#39;LIVE&#39;)
      , Account__r.Live_ID__c 
      , IF(CONTAINS(Safari_Key__c, &#39;MPLS&#39;)
          , Account__r.MPLS_ID__c  
          , IF(CONTAINS(Safari_Key__c, &#39;STL&#39;)
              , Account__r.STL_ID__c   
              , null
            )
        )
    )
)</formula>
    <label>Account Safari Key</label>
    <type>Text</type>
</CustomField>