force-app/main/default/objects/Sync_User_Field_Value__c/fields/Bill_Group__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Group</label>
    <referenceTo>Bill_Group__c</referenceTo>
    <relationshipLabel>Sync User Field Values</relationshipLabel>
    <relationshipName>Sync_User_Field_Values</relationshipName>
    <type>Lookup</type>
</CustomField>