force-app/main/default/objects/Sync_User_Field_Value__c/fields/Bill_Group_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Office_Code__c</fullName>
    <formula>Bill_Group__r.CES_Office__r.Customer_Number__c</formula>
    <label>Bill Group Office Code</label>
    <type>Text</type>
</CustomField>