force-app/main/default/objects/Sync_User_Field_Value__c/fields/Bill_Group_Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Bill_Group_Safari_Key__c</fullName>
    <formula>Bill_Group__r.Safari_ID_Formula__c</formula>
    <label>Bill Group Safari Key</label>
    <type>Text</type>
</CustomField>