force-app/main/default/objects/Sync_User_Field_Value__c/fields/CESContract__c.field-meta.xml
<CustomField>
    <fullName>CESContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Sync User Field Values</relationshipLabel>
    <relationshipName>Sync_User_Field_Values</relationshipName>
    <type>Lookup</type>
</CustomField>