force-app/main/default/objects/Sync_User_Field_Value__c/fields/Contract_Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Contract_Safari_Key__c</fullName>
    <formula>CESContract__r.Safari_Key_Formula__c</formula>
    <label>Contract Safari Key</label>
    <type>Text</type>
</CustomField>