force-app/main/default/objects/Sync_User_Field_Value__c/fields/Credit_Account_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account_Office_Code__c</fullName>
    <formula>Account_Credit_Approval__r.Office_Code__c</formula>
    <label>Credit Account Office Code</label>
    <type>Text</type>
</CustomField>