force-app/main/default/objects/Sync_User_Field_Value__c/fields/Credit_Account_Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account_Safari_Key__c</fullName>
    <formula>Account_Credit_Approval__r.Account_Safari_Key__c</formula>
    <label>Credit Account Safari Key</label>
    <type>Text</type>
</CustomField>