force-app/main/default/objects/Sync_User_Field_Value__c/fields/Delete_Me__c.field-meta.xml
<CustomField>
    <fullName>Delete_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this user field value&#39;s source value was deleted so process the deletion with informatica</description>
    <inlineHelpText>this user field value&#39;s source value was deleted so process the deletion with informatica</inlineHelpText>
    <label>Delete Me</label>
    <type>Checkbox</type>
</CustomField>