force-app/main/default/objects/Sync_User_Field_Value__c/fields/Do_Not_Sync_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_Last_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Sync Last Update</label>
    <type>Checkbox</type>
</CustomField>