force-app/main/default/objects/Sync_User_Field_Value__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Sync User Field Values</relationshipLabel>
    <relationshipName>Sync_User_Field_Values</relationshipName>
    <type>Lookup</type>
</CustomField>