force-app/main/default/objects/Sync_User_Field_Value__c/fields/Premise_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Premise_Office_Code__c</fullName>
    <formula>Premise__r.CES_Office_Code__c</formula>
    <label>Premise Office Code</label>
    <type>Text</type>
</CustomField>