force-app/main/default/objects/Sync_User_Field_Value__c/fields/Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Safari_Key__c</fullName>
    <externalId>true</externalId>
    <label>Safari Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>