force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Sync_Field_Type__c</fullName>
    <formula>TEXT( Sync_User_Field__r.Field_Type__c )</formula>
    <label>Sync Field Type</label>
    <type>Text</type>
</CustomField>