force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_HOU__c.field-meta.xml
<CustomField>
    <fullName>Sync_HOU__c</fullName>
    <formula>Sync_User_Field__r.Sync_HOU__c</formula>
    <label>Sync HOU</label>
    <type>Checkbox</type>
</CustomField>