force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_LIVE__c.field-meta.xml
<CustomField>
    <fullName>Sync_LIVE__c</fullName>
    <formula>Sync_User_Field__r.Sync_LIVE__c</formula>
    <label>Sync LIVE</label>
    <type>Checkbox</type>
</CustomField>