force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Sync_MPLS__c</fullName>
    <formula>Sync_User_Field__r.Sync_MPLS__c</formula>
    <label>Sync MPLS</label>
    <type>Checkbox</type>
</CustomField>