force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_STL__c.field-meta.xml
<CustomField>
    <fullName>Sync_STL__c</fullName>
    <formula>Sync_User_Field__r.Sync_STL__c</formula>
    <label>Sync STL</label>
    <type>Checkbox</type>
</CustomField>