force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_User_Field__c.field-meta.xml
<CustomField>
    <fullName>Sync_User_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sync User Field</label>
    <referenceTo>Sync_User_Field__c</referenceTo>
    <relationshipLabel>Sync User Field Values</relationshipLabel>
    <relationshipName>Sync_User_Field_Values</relationshipName>
    <type>Lookup</type>
</CustomField>