force-app/main/default/objects/Sync_User_Field_Value__c/fields/Sync_Value__c.field-meta.xml
<CustomField>
    <fullName>Sync_Value__c</fullName>
    <formula>IF(AND(CONTAINS(Safari_Key__c, &#39;LIVE&#39;), Sync_User_Field__r.Name == &#39;AllProductType&#39;, Value__c == &#39;Market Price&#39;), &#39;Index&#39;, Value__c)</formula>
    <label>Sync Value</label>
    <type>Text</type>
</CustomField>