force-app/main/default/objects/Sync_User_Field_Value__c/fields/Value_ID__c.field-meta.xml
<CustomField>
    <fullName>Value_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>Value ID</label>
    <type>Text</type>
</CustomField>