force-app/main/default/objects/Sync_User_Field_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sync_Field_Type__c</columns>
    <columns>Sync_User_Field__c</columns>
    <columns>Sync_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>